<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMedicamentActivity"
    style="@style/secondary1">

    <TextView
        style="@style/textColor"
        android:id="@+id/textMedicamentInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:text="@string/add_medicament"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageTablet"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/medication_48px" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/colorBlue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue1"
                app:chipCornerRadius="50dp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/colorBlue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue2"
                app:chipCornerRadius="50dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/colorPurple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                app:chipCornerRadius="50dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/colorRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                app:chipCornerRadius="50dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/colorCrimson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/crimson"
                app:chipCornerRadius="50dp" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/textColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/boxTextInputName"
        android:hint="@string/name"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/blue1"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/textColor"
            android:id="@+id/textFieldMedicament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/textColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/valid"
        android:textAlignment="center"
        android:textSize="30sp" />

    <DatePicker
        style="@style/textColor"
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/textColor"
        android:id="@+id/boxTextInputCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:hint="@string/count"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/blue1"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/textColor"
            android:id="@+id/countMedicament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        style="@style/secondaryButton"
        android:id="@+id/buttonAddMedicament"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue1"
        android:onClick="addMedicament"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add"
        android:textSize="25sp"

        />

</LinearLayout>