<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddKitActivity"
    android:orientation="vertical"
    style="@style/secondary1">
    <TextView
        style="@style/textColor"
        android:id="@+id/textInfoAddKit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:text="@string/add_kit"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageKit"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/medical_services_48px" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/colorBlue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue1"
                app:chipCornerRadius="50dp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/colorBlue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue2"
                app:chipCornerRadius="50dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/colorPurple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                app:chipCornerRadius="50dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/colorRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                app:chipCornerRadius="50dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/colorCrimson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/crimson"
                app:chipCornerRadius="50dp" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxTextInputKit"
        style="@style/textColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="50"
        android:hint="@string/name"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/blue2"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/textColor"
            android:id="@+id/textFieldKit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:fontFamily="monospace"
            android:textSize="25sp"
            android:imeOptions="actionDone"
            android:maxLines="1"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/secondaryButton"
        android:id="@+id/buttonAddKit"
        android:onClick="addKit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add"
        android:textSize="25sp"
        android:fontFamily="serif-monospace"
        android:layout_gravity="center|bottom"
        app:backgroundTint="@color/blue2"
        />
</LinearLayout>